添加后端和用户系统，成绩查询未完成暂不可用

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
