--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/delimiter": "^1.2.0",
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/header": "^2.6.2",
     "@editorjs/list": "^1.7.0",
+    "@editorjs/table": "^2.0.2",
     "axios": "^0.27.2",
+    "editorjs-button": "^1.0.4",
+    "editorjs-undo": "^2.0.4",
+    "highlight.js": "^11.5.1",
     "ts-md5": "^1.2.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
@@ -19,6 +24,8 @@
   "devDependencies": {
     "@editorjs/code": "^2.7.0",
     "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/quote": "^2.4.0",
     "@editorjs/raw": "^2.3.1",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^2.3.3",
