--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@editorjs/inline-code": "^1.3.1",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/raw": "^2.3.1",
+    "@vicons/antd": "^0.12.0",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "naive-ui": "^2.32.1",
