🥳v0.1.0 1.适配新的GO后端 2.添加消息系统 3.添加地图

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@vicons/antd": "^0.12.0",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
+    "leaflet": "^1.9.3",
     "naive-ui": "^2.32.1",
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.19.6",
