--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "bit101",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.1.3",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/editorjs": "^2.25.0",
-    "@editorjs/header": "^2.6.2",
-    "@editorjs/list": "^1.7.0",
-    "@editorjs/table": "^2.0.2",
-    "axios": "^0.27.2",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/table": "^2.2.2",
+    "axios": "^1.5.0",
     "editorjs-button": "^1.0.4",
-    "editorjs-undo": "^2.0.4",
-    "highlight.js": "^11.5.1",
-    "ts-md5": "^1.2.11",
-    "vue": "^3.2.25",
+    "editorjs-undo": "^2.0.23",
+    "highlight.js": "^11.8.0",
+    "ts-md5": "^1.3.1",
+    "vue": "^3.3.4",
     "vue-clipboard3": "^2.0.0",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@editorjs/code": "^2.7.0",
-    "@editorjs/image": "^2.6.2",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/quote": "^2.4.0",
-    "@editorjs/raw": "^2.3.1",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
     "@vicons/antd": "^0.12.0",
     "@vicons/material": "^0.12.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue-leaflet/vue-leaflet": "^0.9.0",
-    "leaflet": "^1.9.3",
-    "naive-ui": "^2.32.1",
-    "typescript": "^4.5.4",
-    "unplugin-vue-components": "^0.19.6",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "leaflet": "^1.9.4",
+    "naive-ui": "^2.34.4",
+    "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.4.9"
   }
 }
