--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bit101",
   "private": true,
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,12 +15,14 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/table": "^2.2.2",
     "axios": "^1.5.0",
+    "echarts": "^5.4.3",
     "editorjs-button": "^1.0.4",
     "editorjs-undo": "^2.0.23",
     "highlight.js": "^11.8.0",
     "ts-md5": "^1.3.1",
     "vue": "^3.3.4",
     "vue-clipboard3": "^2.0.0",
+    "vue-echarts": "^6.6.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
