🤩 v1.0.0 话廊，启动！ 修改后端地址 更新main分支GitHub Action

--- a/.github/workflows/oss.yml
+++ b/.github/workflows/oss.yml
@@ -25,20 +25,26 @@ jobs:
           pnpm install
           pnpm build
       # 上传到OSS
-      - name: OSS Deployment Action
-        # You may pin to the exact commit or the version.
-        # uses: YangHanlin/oss-deployment-action@b3038e19df0e1cd769a242dbf779335e9cd4737f
-        uses: YangHanlin/oss-deployment-action@v1.3.0
+      - name: aliyun-oss-website-action
+        uses: fangbinwei/aliyun-oss-website-action@v1.4.0
         with:
-          # OSS endpoint (required if ossutil is not pre-configured)
-          oss-endpoint: oss-cn-hongkong.aliyuncs.com # optional, default is 
-          # AccessKey ID of user with write access to OSS (required if ossutil is not pre-configured)
-          oss-accesskey-id: ${{ secrets.OSS_ACCESSKEY_ID }} # optional, default is 
-          # AccessKey secret of the user identified by the previous AccessKey ID (required if ossutil is not pre-configured)
-          oss-accesskey-secret: ${{ secrets.OSS_ACCESSKEY_SECRET }} # optional, default is 
-          # Path to the location you'd like to deploy files to, i.e. oss://<BUCKET NAME>/<PATH>
-          oss-path: oss://bit101-page/
-          # Path to the location you'd like to deploy files from
-          local-path: ./dist/
-          # Whether to delete files under `oss-path` before deployment
-          delete-first: true # optional, default is false
+          # Folder which contains the website files
+          folder: ./dist/
+          # Aliyun OSS accessKeyId.
+          accessKeyId: ${{ secrets.OSS_ACCESSKEY_ID }}
+          # Aliyun OSS accessKeySecret.
+          accessKeySecret: ${{ secrets.OSS_ACCESSKEY_SECRET }}
+          # Aliyun OSS bucket instance.
+          bucket: bit101-page
+          # OSS region domain
+          endpoint: oss-cn-hongkong.aliyuncs.com
+          # `true` to identify the endpoint is your custom domain.
+          cname: false # optional, default is false
+          # `true` to skip setting static pages related configuration. `indexPage`, `notFoundPage` will not be used.
+          skipSetting: false # optional, default is false
+          # Save info of uploaded files to increase next upload speed
+          incremental: true # optional, default is true
+          # index page
+          indexPage: index.html # optional, default is index.html
+          # not found page
+          notFoundPage: index.html # optional, default is 404.html
