✨ 实现了浏览器推送通知

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0",
-    "vite-plugin-pwa": "^0.16.6"
-  }
+    "vite-plugin-pwa": "^0.16.6",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0"
+  },
+  "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
