--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "lib": [
       "esnext",
-      "dom"
+      "dom",
+      "WebWorker"
     ],
     "skipLibCheck": true,
     "baseUrl": ".",
@@ -22,7 +23,6 @@
       ]
     },
     "allowJs": true,
-    "suppressImplicitAnyIndexErrors": true,
   },
   "include": [
     "src/**/*.ts",
