--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/table": "^2.2.2",
     "axios": "^1.6.0",
+    "crypto-js": "^4.2.0",
     "echarts": "^5.4.3",
     "editorjs-button": "^1.0.4",
     "editorjs-undo": "^2.0.26",
@@ -31,6 +32,7 @@
     "@editorjs/inline-code": "^1.4.0",
     "@editorjs/quote": "^2.5.0",
     "@editorjs/raw": "^2.4.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.8.9",
     "@vicons/antd": "^0.12.0",
     "@vicons/material": "^0.12.0",
